# hsthrift

compiler/: .thrift-compiler.cabal.swp  thrift-compiler.cabal
compiler/Thrift/Compiler/: .Options.hs.swp  Types.hs
