cabal-version:       3.4

name:                thrift-compiler
version:             0.1.0.0
synopsis: A compiler from the Thrift Interface Definition Language (IDL) to Haskell
bug-reports:         https://github.com/facebookincubator/hsthrift/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Facebook, Inc.
maintainer:          hsthrift-team@fb.com
copyright:           (c) Facebook, All Rights Reserved
category:            Thrift
build-type:          Simple
extra-source-files:  CHANGELOG.md

common fb-haskell
    default-language: Haskell2010
    default-extensions:
        BangPatterns
        BinaryLiterals
        DataKinds
        DeriveDataTypeable
        DeriveGeneric
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NoMonomorphismRestriction
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeFamilies
        TypeSynonymInstances
        NondecreasingIndentation

library
    import: fb-haskell
    hs-source-dirs: . 
    exposed-modules:
        Thrift.Compiler.Lexer
        Thrift.Compiler.Options
        Thrift.Compiler.Parser
        Thrift.Compiler.Types

    build-depends:
        array,
        base,
        dependent-sum,
        extra,
        filepath,
        containers,
        text,
        transformers,
        bytestring,
    build-tool-depends: alex:alex, happy:happy

